--- a/css/index-css.css
+++ b/css/index-css.css
@@ -381,3 +381,83 @@ margin: 0 auto;
         background-color: rgb(255, 255, 255);
         color: rgb(255,181,72);
     }
+    .press__wrapper__quotes {
+        width: 54.5%;
+        height: 75%;
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .quotes__content {
+        width: 63.14%;
+        height: 27.8%;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 1.5%;
+        padding-bottom: 3%;
+        box-sizing: border-box;
+        background-color: rgba(255, 255, 255, 0.08);
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        border-radius: 10px;
+    }
+    .quotes__content+.quotes__content {
+        height: 31.3%;
+    }
+    .quotes__content:first-child {
+        margin-left: auto;
+    }
+    .quotes__content:last-child {
+        margin-left: 25%;
+    }
+    .quotes__content__whoIs {
+        display: flex;
+        align-items: center;
+    }
+    .whoIs__avatar {
+        width: 16%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        border-radius: 50%;
+        box-shadow: 4px 2px 0 2px rgb(255, 181, 72);
+    }
+    .whoIs__avatar img {
+        max-width: 100%;
+        width: 100%;
+        border-radius: 50%;
+    }
+    .whoIs__description {
+        margin-left: 7.7%;
+    }
+    .whoIs__description__name {
+        font-family: "Bebas neue";
+        font-weight: 700;
+        font-size: 24px;
+        letter-spacing: 2px;
+        color: rgb(255, 181, 72);
+    }
+    .whoIs__description__profession {
+        opacity: 0.5;
+    }
+    .whoIs__link {
+        opacity: 0.3;
+        margin-left: auto;
+        transition: 0.5s;
+    }
+    .whoIs__link:hover {
+        opacity: 1;
+        transition: 0.5s;
+    }
+    .quotes__content__quote, .quotes__content__date {
+        width: fit-content;
+    }
+    .quote__paragraph {
+       font-size: 18px;
+    }
+    .date__paragraph {
+        font-size: 14px;
+        opacity: 0.5;
+    }
