--- a/css/index-css.css
+++ b/css/index-css.css
@@ -382,7 +382,7 @@ margin: 0 auto;
         color: rgb(255,181,72);
     }
     .press__wrapper__quotes {
-        width: 54.5%;
+        width: 50.2%;
         height: 75%;
         margin-left: auto;
         display: flex;
@@ -407,10 +407,10 @@ margin: 0 auto;
         height: 31.3%;
     }
     .quotes__content:first-child {
-        margin-left: auto;
+        margin-left: 22%;
     }
     .quotes__content:last-child {
-        margin-left: 25%;
+        margin-left: 14.5%;
     }
     .quotes__content__whoIs {
         display: flex;
@@ -460,4 +460,169 @@ margin: 0 auto;
     .date__paragraph {
         font-size: 14px;
         opacity: 0.5;
+    }
+
+
+    /* ====== Newsletter ====== */
+
+
+    .newsletter {
+        width: 100%;
+        position: relative;
+        padding-top: 51.59%;
+        background-image:   radial-gradient(78.66% 177.87% at 19.56% 37.57%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 19.22%, #080A0B 99.74%),
+                            url(../images/image_2.png);
+        background-repeat: no-repeat, no-repeat;
+        background-position: center center, 21.5% 100%;
+        background-size: 100%, 30.8% auto;
+    }
+    .newsletter__wrapper {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+    .newsletter__wrapper__content {
+        width: 45.2%;
+        height: 40.87%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 8.9%;
+        margin-left: auto;
+    }
+    .newsletter__paragpraph {
+        font-size: 18px;
+    }
+    .newsletter__wrapper__form {
+        height: 19.7%;
+    }
+    .newsletter__wrapper__form form {
+        display: flex;
+        justify-content: space-between;
+    }
+    .newsletter__wrapper__form form, .newsletter__wrapper__form form input {
+        height: 100%;
+    }
+    .newsletter__wrapper__form form input  {
+        box-sizing: border-box;
+        border: none;
+        border-radius: 4px;
+    }
+    .newsletter__wrapper__form form input:focus {
+        outline: none;
+    }
+    .newsletter__wrapper__form form input[type=submit] {
+        width: 39.93%;
+        background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
+        font-weight: 700;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .newsletter__wrapper__form form input[type=email] {
+        width: 100%;
+        background: rgba(255, 255, 255, 0.08);
+        color: rgb(255,181,72);
+        padding-left: 6%;
+        padding-top: 7.35%;
+        font-size: 18px;
+    }
+    .newsletter__wrapper__form form label {
+        width: 58.6%;
+        cursor: text;
+    }
+    .label__text {
+        padding-left: 6%;
+        transform: translateY(-140%);
+        font-size: 24px;
+        opacity: 0.5;
+        transition:  all 0.3s;
+    }
+    .newsletter__wrapper__form form input[type=email]:focus+.label__text {
+        transform: translateY(-240%);
+        font-size: 18px;
+        transition: all 0.3s;
+    }
+    .newsletter__wrapper__form form input[type=email]:valid+.label__text {
+        transform: translateY(-240%);
+        font-size: 18px;
+    }
+
+
+    /*====== Footer ====== */
+
+
+    footer {
+        position: relative;
+        width: 100%;
+        padding-top: 16.15%;
+    }
+    .footer__wrapper {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+    .footer__wrapper__content {
+        width: 83.2%;
+        height: 78.1%;
+        margin: 0 auto auto auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .footer__wrapper__top {
+        width:100%;
+        margin: 0 auto;
+        display: flex;
+    }
+    .logo_size_m {
+        width: 12%;
+        margin-right: auto;
+    }
+    .logo_size_m img {
+        width: 100%;
+    }
+    footer .navMenu {
+        margin-left: 11.6%;
+        margin-right: 7.6%;
+    }
+    .socialLinks {
+        display: flex;
+        width: 30%;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .socialLinks__item:nth-child(3) {
+        color: rgb(255, 255, 255);
+    }
+    footer hr {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    .footer__wrapper__bot {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .bottom__right {
+        height: fit-content;
+        display: flex;
+        justify-content: space-between;
+        font-size: 12px;
+        font-weight: 700;
+        font-size: 12px;
+        letter-spacing: 0.1em;
+        width: 35%;
+    }
+    .bottom__right a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+    }
+    .bottom__left {
+        font-weight: 400;
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.5)
     }
